--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     </div>
     <div id="controls">
         <button id="refresh-button">Refresh</button>
+        <div id="rate-limit-card">
+            <span class="label">API Requests:</span>
+            <span id="rate-count">0/100</span>
+            <span class="label">/min</span>
+        </div>
     </div>
     <script type="module" src="map.js"></script>
 </body>
