--- a/index.html
+++ b/index.html
@@ -22,6 +22,32 @@
             <span id="rate-count">0/100</span>
             <span class="label">/min</span>
         </div>
+        <fieldset id="filter">
+            <div>
+                <input type="checkbox" id="subway" name="subway" checked />
+                <label for="subway">U-Bahn</label>
+            </div>
+            <div>
+                <input type="checkbox" id="tram" name="tram" checked />
+                <label for="tram">Tram</label>
+            </div>
+            <div>
+                <input type="checkbox" id="suburban" name="suburban" checked />
+                <label for="suburban">S-Bahn</label>
+            </div>
+            <div>
+                <input type="checkbox" id="bus" name="bus" checked />
+                <label for="bus">Bus</label>
+            </div>
+            <div>
+                <input type="checkbox" id="regional" name="regional" checked />
+                <label for="regional">Regional Train</label>
+            </div>
+            <div>
+                <input type="checkbox" id="express" name="express" checked />
+                <label for="express">Express Train</label>
+            </div>
+        </fieldset>
     </div>
     <script type="module" src="map.js"></script>
 </body>
