--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
         </div>
         <fieldset id="filter">
             <div>
-                <input type="checkbox" id="subway" name="subway" checked />
+                <input type="checkbox" id="subway" name="subway" value="subway" checked />
                 <label for="subway">U-Bahn</label>
             </div>
             <div>
-                <input type="checkbox" id="tram" name="tram" checked />
+                <input type="checkbox" id="tram" name="tram" value="tram" checked />
                 <label for="tram">Tram</label>
             </div>
             <div>
-                <input type="checkbox" id="suburban" name="suburban" checked />
+                <input type="checkbox" id="suburban" name="suburban" value="suburban" checked />
                 <label for="suburban">S-Bahn</label>
             </div>
             <div>
-                <input type="checkbox" id="bus" name="bus" checked />
+                <input type="checkbox" id="bus" name="bus" value="bus" checked />
                 <label for="bus">Bus</label>
             </div>
             <div>
-                <input type="checkbox" id="regional" name="regional" checked />
+                <input type="checkbox" id="regional" name="regional" value="regional" checked />
                 <label for="regional">Regional Train</label>
             </div>
             <div>
-                <input type="checkbox" id="express" name="express" checked />
+                <input type="checkbox" id="express" name="express" value="express" checked />
                 <label for="express">Express Train</label>
             </div>
         </fieldset>
