marker count tracker

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <label for="express">Express Train</label>
             </div>
         </fieldset>
+        <div id="marker-count"></div>
     </div>
     <script type="module" src="map.js"></script>
 </body>
