polygon on-off button

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             </div>
         </fieldset>
         <div id="marker-count"></div>
+        <button id="polygon-button">Polygon <span id="polygon-button-span">On</span></button>
     </div>
     <script type="module" src="map.js"></script>
 </body>
