frontend maybe connected

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <div id="marker-count"></div>
         <button id="polygon-button">Polygon <span id="polygon-button-span">On</span></button>
     </div>
+    <script type="module" src="rateLimitUI.js"></script>
     <script type="module" src="map.js"></script>
 </body>
 
