stations added but too slow

--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
             </div>
         </fieldset>
 
+        <fieldset id="stations-filter" class="filter">
+            <legend>Stations</legend>
+            <div>
+                <input type="checkbox" id="show_stations" name="show_stations" value="stations" checked />
+                <label for="show_stations">Show Stations</label>
+            </div>
+        </fieldset>
+
     </div>
     <script>
         // Bottom sheet toggle for mobile
