--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
             </div>
 
     </div>
+    <a href="https://ayusuftatli.com" target="_blank" rel="noopener noreferrer" class="portfolio-link">Built by Yusuf
+        Tatlı</a>
     <script>
         // Bottom sheet toggle for mobile
         document.addEventListener('DOMContentLoaded', () => {
@@ -115,6 +117,7 @@
     </script>
     <script type="module" src="rateLimitUI.js"></script>
     <script type="module" src="map.js"></script>
+
 </body>
 
 
