--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="train.png">
     <title>Berlin Transit Live Map</title>
+
+    <!-- Open Graph (LinkedIn) -->
+    <meta property="og:title" content="Berlin Transit Live Map">
+    <meta property="og:description"
+        content="Real-time map of Berlin public transit vehicles (U-Bahn, S-Bahn, Tram, Bus).">
+    <meta property="og:image" content="https://berlintransitmap.live/og-image.png">
+    <meta property="og:url" content="https://berlintransitmap.live/">
+    <meta property="og:type" content="website">
+
     <link rel="stylesheet" href="map.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
